# ECOGEN

./: .clang-format  .gitignore  .pre-commit-config.yaml  AUTHORS  CMakeLists.txt  COPYRIGHT  ECOGEN.xml  LICENSE  Makefile  README_Developer.md
.github/workflows/: build-doc.yml
coverage_and_profile/: README_coverage.md  README_profile.md
docs/doxygen_docs/: doxygen.conf
docs/sphinx_docs/: Dockerfile  Makefile  requirements.req
libEOS/: IG_RT_dynamicViscosity.xml  IG_air.xml  IG_airBlasiusLEIS.xml  IG_airBlasiusLaminar.xml  IG_airBlasiusTurbulent.xml  IG_dodVap_cavitation.xml  IG_heavyGas.xml  IG_lightGas.xml  IG_waterVap.xml  IG_waterVap2.xml  IG_waterVap_cavitation.xml  IG_waterVap_venturi.xml  NASG_waterLiq.xml  Polynomial_arbitrary.xml  SG_HMX.xml  SG_dodLiq_cavitation.xml  SG_liquidForSurfaceTensionCases.xml  SG_mixtureShockTube.xml  SG_water.xml  SG_water300K.xml  SG_waterIncomp.xml  SG_waterLiq.xml  SG_waterLiq_cavitation.xml  SG_waterLiq_venturi.xml  SG_water_cavitation.xml  VDW_water.xml
libMeshes/: .gitignore
libMeshes/Blasius/: BlasiusLEIS.geo  BlasiusTurbulent.geo
libMeshes/ECOGEN/: ECOGENFluid.geo
libMeshes/boundaryLayer/: boundaryLayerGrossier.geo  boundaryLayerLast3.geo  boundaryLayerReduitGrossier.geo  supersonic1.geo
libMeshes/cone/: cone_quadrangle.geo  (+1 more)
libTests/: manualInitialConditions.xml  manualMain.xml  manualMesh.xml  manualModel.xml  tests.list
nonreg/: ECOGEN_nonReg_full.list  nonreg.sh
src/: Config.cpp  Config.h  Errors.cpp  Errors.h  Run.cpp  Run.h  Tools.cpp  Tools.h  main.cpp  timeStats.cpp  timeStats.h
src/Eos/: Eos.h  (+12 more)
(+863 files in other folders)
